# SatyaGyan---Real-Time-Fact-Detection-

./: 1.md  README.md  app.py  crew.py  main.py  pyproject.toml  requirements.txt  run.bat  show_tools.py
