[project]
name = "fact_checker"
version = "0.1.0"
description = "fact_checker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
fact_checker = "fact_checker.main:run"
run_crew = "fact_checker.main:run"
train = "fact_checker.main:train"
replay = "fact_checker.main:replay"
test = "fact_checker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
